fix: header buttons

--- a/index.html
+++ b/index.html
@@ -37,12 +37,8 @@
 			<div class="header__content">
 				<div class="container">
 					<section class="header__buttons">
-						<button class="header__button">
-							<img src="../img/icons/menu.svg" alt="Navigation button">
-						</button>
-						<button class="header__button">
-							<img src="../img/icons/search.svg" alt="Search button">
-						</button>
+						<button class="header__button header__button--menu"></button>
+						<button class="header__button header__button--search"></button>
 					</section>
 					<section class="header__description">
 						<h1 class="header__title">Юнит</h1>
