fix: layout mistakes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<form class="header__form">
 						<input type="text" class="input" placeholder="Ваше имя">
 						<input type="email" class="input" placeholder="Email">
-						<button class="button__primary input">начать триал</button>
+						<button class="button-primary input">начать триал</button>
 					</form>
 					<div class="header__scroll">
 						<a href="#functional">
@@ -65,7 +65,7 @@
 						<h2 class="title">функционал</h2>
 						<h3 class="subtitle">Получайте больше</h3>
 					</header>
-					<main class="functional__row">
+					<section class="functional__row">
 						<div class="card">
 							<img src="./img/icons/functional/fun01.svg" alt="Card image" class="card__img">
 							<h4 class="card__title">Создан для управления</h4>
@@ -94,14 +94,14 @@
 								Согласно ставшей уже классической работе Филипа Котлера, рекламная площадка отталкивает рейтинг.
 							</p>
 						</div>
-					</main>
+					</section>
 				</div>
 			</article>
 			<article class="cta">
 				<div class="cta__content">
 					<div class="container">
 						<h2 class="title">Начните использовать <span>Юнит</span> уже сегодня.</h2>
-						<button class="button__primary">подключить</button>
+						<button class="button-primary">подключить</button>
 					</div>
 				</div>
 			</article>
@@ -113,11 +113,11 @@
 								<h2 class="title">гибкое управление</h2>
 								<h3 class="subtitle">Задачи и подзадачи</h3>
 							</header>
-							<main class="tasks__text">
+							<section class="tasks__text">
 								<p>
 									Тактика выстраивания отношений с коммерчекими агентами, вопреки мнению П.Друкера, искажает продвигаемый отраслевой стандарт. Стратегический рыночный план традиционно масштабирует комплексный имидж. Спонсорство развивает формат события.
 								</p>
-							</main>
+							</section>
 						</div>
 						<div class="tasks__img">
 							<img src="./img/iphone.jpg" alt="iPhone" title="iPhone">
@@ -136,11 +136,11 @@
 								<h2 class="title">всегда в фокусе</h2>
 								<h3 class="subtitle">Множественные приоритеты</h3>
 							</header>
-							<main class="focus__text">
+							<section class="focus__text">
 								<p>
 									Потребление существенно продуцирует рыночный традиционный канал. В соответствии с законом Ципфа, маркетинг основан на тщательном анализе данных. Наряду с этим, целевой трафик конкурентоспособен.
 								</p>
-							</main>
+							</section>
 						</div>
 					</div>
 				</div>
@@ -152,7 +152,7 @@
 							<h2 class="title">цены</h2>
 							<h3 class="subtitle">Выберите подходящий план</h3>
 						</header>
-						<main class="price__row">
+						<section class="price__row">
 							<div class="package">
 								<div class="package__header">
 									<h4 class="title">базовый</h4>
@@ -166,39 +166,39 @@
 									<li class="package__item">5 GB медиа хранилище</li>
 									<li class="package__item">Поддержка по Email</li>
 								</ul>
-								<button class="button__outline">выбрать</button>
+								<button class="button-outline">выбрать</button>
 							</div>
 							<div class="package package--special">
 								<div class="package__header">
-									<h4 class="title">базовый</h4>
-									<div class="package__price">15</div>
+									<h4 class="title">стандарт</h4>
+									<div class="package__price">65</div>
 									<div class="period">$/мес</div>
 								</div>
 								<ul class="package__list">
-									<li class="package__item">10 проектов</li>
-									<li class="package__item">5 участников</li>
+									<li class="package__item">50 проектов</li>
+									<li class="package__item">10 участников</li>
 									<li class="package__item">∞ количество задач</li>
-									<li class="package__item">5 GB медиа хранилище</li>
+									<li class="package__item">25 GB медиа хранилище</li>
 									<li class="package__item">Поддержка по Email</li>
 								</ul>
-								<button class="button__outline button__solid">выбрать</button>
+								<button class="button-outline button-solid">выбрать</button>
 							</div>
 							<div class="package">
 								<div class="package__header">
-									<h4 class="title">базовый</h4>
-									<div class="package__price">15</div>
+									<h4 class="title">премиум</h4>
+									<div class="package__price">125</div>
 									<div class="period">$/мес</div>
 								</div>
 								<ul class="package__list">
-									<li class="package__item">10 проектов</li>
-									<li class="package__item">5 участников</li>
+									<li class="package__item">100 проектов</li>
+									<li class="package__item">30 участников</li>
 									<li class="package__item">∞ количество задач</li>
-									<li class="package__item">5 GB медиа хранилище</li>
+									<li class="package__item">50 GB медиа хранилище</li>
 									<li class="package__item">Поддержка по Email</li>
 								</ul>
-								<button class="button__outline">выбрать</button>
+								<button class="button-outline">выбрать</button>
 							</div>
-						</main>
+						</section>
 					</div>
 				</div>
 			</article>
@@ -208,7 +208,7 @@
 						<h2 class="title">наши клиенты</h2>
 						<h3 class="subtitle">Что говорят пользователи</h3>
 					</header>
-					<main class="slider">
+					<section class="slider">
 						<button class="arrow arrow--left"></button>
 						<button class="arrow arrow--right"></button>
 						<div class="slider__item">
@@ -223,7 +223,7 @@
 								</div>
 							</div>
 						</div>
-					</main>
+					</section>
 				</div>
 			</article>
 		</main>
