feat: add responsive layout

--- a/index.html
+++ b/index.html
@@ -211,6 +211,13 @@
 					<section class="slider">
 						<button class="arrow arrow--left"></button>
 						<button class="arrow arrow--right"></button>
+						<div class="slider__pagination">
+							<button class="slider__pagination-item"></button>
+							<button class="slider__pagination-item slider__pagination-item--active"></button>
+							<button class="slider__pagination-item"></button>
+							<button class="slider__pagination-item"></button>
+							<button class="slider__pagination-item"></button>
+						</div>
 						<div class="slider__item">
 							<p class="text">
 								Это потрясающее приложение которое помогло мне завершить все мои дела, и сделать дипломный проект раньше срока. 
