--- a/index.html
+++ b/index.html
@@ -67,28 +67,36 @@
 					</header>
 					<section class="functional__row">
 						<div class="card">
-							<img src="./img/icons/functional/fun01.svg" alt="Card image" class="card__img">
+							<div class="card__img">
+								<img src="./img/icons/functional/fun01.svg" alt="Card image">
+							</div>
 							<h4 class="card__title">Создан для управления</h4>
 							<p class="card__text">
 								Согласно ставшей уже классической работе Филипа Котлера, рекламная площадка отталкивает рейтинг.
 							</p>
 						</div>
 						<div class="card">
-							<img src="./img/icons/functional/fun02.svg" alt="Card image" class="card__img">
+							<div class="card__img">
+								<img src="./img/icons/functional/fun02.svg" alt="Card image">
+							</div>
 							<h4 class="card__title">Голосовое управление</h4>
 							<p class="card__text">
 								Согласно ставшей уже классической работе Филипа Котлера, рекламная площадка отталкивает рейтинг.
 							</p>
 						</div>
 						<div class="card">
-							<img src="./img/icons/functional/fun03.svg" alt="Card image" class="card__img">
+							<div class="card__img">
+								<img src="./img/icons/functional/fun03.svg" alt="Card image">
+							</div>
 							<h4 class="card__title">Контроль бюджета</h4>
 							<p class="card__text">
 								Согласно ставшей уже классической работе Филипа Котлера, рекламная площадка отталкивает рейтинг.
 							</p>
 						</div>
 						<div class="card">
-							<img src="./img/icons/functional/fun04.svg" alt="Card image" class="card__img">
+							<div class="card__img">
+								<img src="./img/icons/functional/fun04.svg" alt="Card image">
+							</div>
 							<h4 class="card__title">Статистика и графики</h4>
 							<p class="card__text">
 								Согласно ставшей уже классической работе Филипа Котлера, рекламная площадка отталкивает рейтинг.
@@ -223,7 +231,9 @@
 								Это потрясающее приложение которое помогло мне завершить все мои дела, и сделать дипломный проект раньше срока. 
 							</p>
 							<div class="author">
-								<img src="./img/users/user01.jpg" alt="Author avatar" class="author__avatar">
+								<div class="autor__avatar">
+									<img src="./img/users/user01.jpg" alt="Author avatar" class="author__avatar">
+								</div>
 								<div class="author__name">
 									<span>Фрилансер</span> 
 									<p>Николай Остапов</p>
@@ -243,10 +253,18 @@
 						<a href="#" class="nav__item">контакты</a>
 					</nav>
 					<div class="socials">
-						<a href="https://twitter.com/" class="socials__item socials__item--twitter" target=" _blank"></a>
-						<a href="https://facebook.com/" class="socials__item socials__item--facebook" target=" _blank"></a>
-						<a href="https://instagram.com/" class="socials__item socials__item--instagram" target=" _blank"></a>
-						<a href="https://vk.com/" class="socials__item socials__item--vk" target=" _blank"></a>
+						<a href="https://twitter.com/" class="socials__item socials__item--twitter" target="_blank">
+							<img src="./img/icons/socials/twitter.svg" alt="Twitter" title="Twitter">
+						</a>
+						<a href="https://facebook.com/" class="socials__item socials__item--facebook" target="_blank">
+							<img src="./img/icons/socials/facebook.svg" alt="Facebook" title="Facebook">
+						</a>
+						<a href="https://instagram.com/" class="socials__item socials__item--instagram" target="_blank">
+							<img src="./img/icons/socials/instagram.svg" alt="Instagram" title="Instagram">
+						</a>
+						<a href="https://vk.com/" class="socials__item socials__item--vk" target="_blank">
+							<img src="./img/icons/socials/vk.svg" alt="Vk" title="Vk">
+						</a>
 					</div>
 				</div>
 				<div class="footer__copyright">
